--- a/configure.ac
+++ b/configure.ac
@@ -3,12 +3,12 @@ AC_PREREQ([2.60])
 define(_CLIENT_VERSION_MAJOR, 0)
 define(_CLIENT_VERSION_MINOR, 18)
 define(_CLIENT_VERSION_REVISION, 2)
-define(_CLIENT_VERSION_BUILD, 0)
-define(_CLIENT_VERSION_RC, 2)
+define(_CLIENT_VERSION_BUILD, 1)
+define(_CLIENT_VERSION_RC, 1)
 define(_CLIENT_VERSION_IS_RELEASE, false)
-define(_COPYRIGHT_YEAR, 2020)
+define(_COPYRIGHT_YEAR, 2023)
 dnl VELES BEGIN
-define(_CLIENT_VERSION_CODENAME, [Blockchain Barracuda])
+define(_CLIENT_VERSION_CODENAME, [Crypto Chrysalis])
 define(_BITCORE_COPYRIGHT_YEAR, 2020)
 define(_DASH_COPYRIGHT_YEAR, 2018)
 define(_FXTC_COPYRIGHT_YEAR, 2020)
